реализована возможность отправки дайджестов
