# internal/api/openapi/v1_scrapper/oas_request_encoders_gen.go
@@ -39,28 +39,8 @@ func encodeLinksPostRequest(
 	return nil
 }
 
-func encodeTgChatIDPostRequest(
-	req OptChatSettings,
-	r *http.Request,
-) error {
-	const contentType = "application/json"
-	if !req.Set {
-		// Keep request with empty body if value is not set.
-		return nil
-	}
-	e := new(jx.Encoder)
-	{
-		if req.Set {
-			req.Encode(e)
-		}
-	}
-	encoded := e.Bytes()
-	ht.SetBody(r, bytes.NewReader(encoded), contentType)
-	return nil
-}
-
-func encodeTgChatIDPutRequest(
-	req *ChatSettings,
+func encodeNotificationSettingsPostRequest(
+	req *UpdateNotificationSettingsRequest,
 	r *http.Request,
 ) error {
 	const contentType = "application/json"
